# EPRsim

./: .gitignore  .readthedocs.yaml  CONTRIBUTORS.txt  EPRsim-coverpage.md  README.md  README.rst  demo.py  eprsim-tests.py  pyproject.toml  setup.py
EPRsim/: Direct_conversion_to_Field.py  EPRsim.py  FastMotion.py  Hamiltonian_Eig.py  Nucdic.py  Pauli_generators.py  Presettings.py  SolidState.py  Tools.py  Validate_input_parameter.py  __init__.py  resfield_full.py  spectral_processing.py
EPRsim_src/: FastMotion.py  Hamiltonian_Point_Group.py  Presettings.py  SolidState.py  Tools.py  eprload.py  eprload_2.py  resfield_full.py
doc/: EPRsim-coverpage.rst  conf.py  docdoc.rst  eprload.rst  eprsim.rst  index.rst  og-coverpage.rst  package-docs.rst  packaging.rst  sphinx.rst  testing.rst
doc/oldsource/: docdoc.rst  overview.rst
doc/source/: conf.py  conv2field.rst  docdoc.rst  eprload.rst  eprsim.rst  fastmotion.rst  hamil_eig.rst  index.rst  interpolation.rst  nucdic.rst  overview.rst  presettings.rst  src.rst  test.rst.rst  testing.rst  tools.rst  validate_input.rst
doc/source/_static/: eprsim.css
doc/source/_templates/: module-template.rst
doc/source/devel/: convolutions.rst  docdoc.rst  eprload.rst  eprsim-backend.rst  hamil_pointgroup.rst  index.rst  packaging.rst  pauli_gen.rst  programming.rst  resfield.rst  solidstate.rst  spectral_proc.rst
doc/source/user/: eprload.rst  index.rst  og-coverpage.rst  tools.rst
eprsim/: Convolutions.py  EPRload.py  Interpolation_lib.py  Tools.py  __init__.py  resfield_full.py
examples/: EPRload_example.ipynb  eprsim-demo.py
redundant/: requirements.txt  setup.py
src/: .eprload_to_implement.py  Convolutions.py  Direct_conversion_to_Field.py  EPRload.py  EPRplot.py  EPRsim.py  FastMotion.py  Hamiltonian_Eig.py  Hamiltonian_Point_Group.py  Interpolation_lib.py  Nucdic.py  Pauli_generators.py  Presettings.py  SolidState.py  Tools.py  Validate_input_parameter.py  __init__.py  __version__.py  resfield_full.py  spectral_processing.py
test/: TestingREADME.md  eprload_test.py  eprsim_test.py  import_test.py  load_bruker.py  load_specman.py
test/eprfiles/: FileInfo.md
test/simfiles/: aniso_NH_ss_spc.npy  aniso_N_fm_spc.npy  aniso_N_ss_spc.npy  iso_nitrox_spc.npy  multicomponent_ss_B.npy  multicomponent_ss_spc.npy  triplet_B.npy  triplet_spc.npy
tests/: TestReadme.md  eprload.py  eprload_test.py  eprsim_test.py  run_eprload.py
tests/eprfiles/: FileInfo.md
