[project]
name = "eprsim"
dynamic = ["version"]
#version = '0.1.3'
description = "A Python library for loading and simulating EPR spectra."
authors = [
	{name = "Stefan Rein", email = "stephan.rein@physchem.uni-freiburg.de"},
	{name= "Darien Morrow"},
	{name = "Liam Twomey"},
]
maintainers = [
	{name="Liam Twomey"},
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["photophysics","spectroscopy","science","electron","paramagnetic","resonance"]
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt","test/eprfiles/LICENSE.md"]
classifiers = [
	"Private :: Do Not Upload",
	"Devlopment Status :: 4 - Beta",
	"Intended Audience :: Scientists",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]
dependencies = [
	'numpy',
	'scipy',
	'numba',
	'matplotlib',
	'pathlib',
]

[project.optional-dependencies]
devel=[
	'pytest', # testing framework
	'setuptools', # build system
	'sphinx', # documentation system
	'pydata_sphinx_theme', # documentation theme
	'mock', # documentation workaround
	'sphinx_copybutton',# enables auto copying of snippets
	'sphinx_design' # allows use of grid, button elements in docs
	]

[project.urls]
Repository = "https://github.com/LiamTwomey/EPRsim"
Issues = "https://github.com/Liam-Twomey/EPRsim/issues"
Homepage = "https://github.com/LiamTwomey/EPRsim"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
eprsim = "src"

[tool.setuptools.dynamic]
version = {attr = "eprsim.__version__"}

[pytest]
testpaths = ["test"]
norecursedirs = ["eprfiles", "simfiles"] # ignore these when checking for tests
python_files = "*_test.py" #ignore files not ending with test

[tool.pytest.ini_options]
addopts = [
	"--import-mode=importlib",
]
